--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Data Service (APIs)</title>
+  <script>
+    // for intl support
+    window.global = window;
+  </script>
 </head>
 
 <body>
